--- a/public/admin/view/index.html
+++ b/public/admin/view/index.html
@@ -4,6 +4,7 @@
     <title><%= title %></title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="http://localhost:3000/app/build/css/main.css" rel="stylesheet">
   </head>
   <body>
     <div id="example"></div>
