--- a/src/css/pc/style.scss
+++ b/src/css/pc/style.scss
@@ -1,5 +1,5 @@
 #my{
     border:1px red solid;
-    background-image: url("../img/1.png");
+    background-image: url("../img/a1.jpg");
     height: 200px
 }
